--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
   </head>
 
   <body>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <%= link_to lists_path do %>
+        <i class="fa-solid fa-film fs-2"></i>
+      <% end %>
+      <div class="d-flex">
+        <%= link_to "My Lists", lists_path, class:"nav-link me-4" %>
+        <%= link_to "Add List", new_list_path, class:"nav-link" %>
+      </div>
+    </div>
+  </nav>
+
     <%= yield %>
   </body>
 </html>
