--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= @list.img_url %>)">
+<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url()">
   <div class="btn-top-right btn btn-success">Movies: <%= @list.bookmarks.count %></div>
   <div class="container">
     <h1><%= @list.name %></h1>
