--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url()">
+<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= cl_image_path @list.photo.key %>)">
   <div class="btn-top-right btn btn-success">Movies: <%= @list.bookmarks.count %></div>
   <div class="container">
     <h1><%= @list.name %></h1>
@@ -13,7 +13,7 @@
     <% @bookmarks.each do |bookmark| %>
       <div class="col-4">
           <div class="card">
-            <img src="<%= bookmark.movie.poster_url %>" class="card-img-top" alt="...">
+            <img src="<%= bookmark.movie.poster_url %>" class="card-img-top" alt="movie poster">
             <div class="card-body">
               <h5 class="card-title"><%= bookmark.movie.title %></h5>
               <p class="card-text"><%= bookmark.movie.overview %></p>
