--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,7 +4,7 @@
       <h1>Add a new list</h1>
       <%= simple_form_for(@list) do |f| %>
         <%= f.input :name %>
-        <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+        <%= f.input :photo, as: :file %>
         <%= f.button :submit, class: 'btn btn-primary' %>
       <% end %>
     </div>
