--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,11 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= cl_image_path @list.photo.key %>)">
+<div class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%=
+  if @list.photo.attached?
+    cl_image_path @list.photo.key
+  else
+    cl_image_path("placeholder.jpg")
+  end
+   %>)">
+
   <div class="btn-top-right btn btn-success">Movies: <%= @list.bookmarks.count %></div>
   <div class="container">
     <h1><%= @list.name %></h1>
