--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,7 +14,13 @@
     <% @lists.each do |list| %>
       <div class="col-4">
         <%= link_to list_path(list) do %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path list.photo.key %>)">
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=
+            if list.photo.attached?
+              cl_image_path list.photo.key
+            else
+              cl_image_path("placeholder.jpg")
+            end
+          %>)">
             <%= list.name %>
           </div>
         <% end %>
