--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,9 +8,9 @@
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1>My lists</h1>
-    <%= link_to "Create a movie list", new_list_path, class:"btn btn-success" %>
+    <%= link_to "Create a movie list", new_list_path, class:"btn btn-success rounded-4" %>
   </div>
-  <div class="row">
+  <div class="row mb-4">
     <% @lists.each do |list| %>
       <div class="col-4">
         <%= link_to list_path(list) do %>
