--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,7 +6,7 @@
   end
    %>)">
 
-  <div class="btn-top-right btn btn-success">Movies: <%= @list.bookmarks.count %></div>
+  <div class="btn-top-right btn btn-success rounded-4">Movies: <%= @list.bookmarks.count %></div>
   <div class="container">
     <h1><%= @list.name %></h1>
   </div>
@@ -14,22 +14,38 @@
 
 <div class="container">
   <div class="mb-4 d-flex justify-content-end">
-    <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-success" %>
+    <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-success rounded-4" %>
   </div>
   <div class="row mb-4">
-    <% @bookmarks.each do |bookmark| %>
-      <div class="col-4">
-          <div class="card">
-            <img src="<%= bookmark.movie.poster_url %>" class="card-img-top" alt="movie poster">
-            <div class="card-body">
-              <h5 class="card-title"><%= bookmark.movie.title %></h5>
-              <p class="card-text"><%= bookmark.movie.overview %></p>
-              <p class="card-text"><%= bookmark.movie.rating %></p>
-              <p class="card-text"><%= bookmark.comment %></p>
-              <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"btn btn-danger" %>
+    <div class="col-8">
+      <div class="row">
+         <% @bookmarks.each do |bookmark| %>
+        <div class="col-12 col-md-6 mb-4">
+            <div class="card h-100 rounded-4 shadow-sm">
+              <img src="<%= bookmark.movie.poster_url %>" class="card-img-top rounded-top-4" alt="movie poster">
+              <div class="card-body d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title h4"><%= bookmark.movie.title %></h5>
+                  <p class="card-text"><%= bookmark.movie.overview %></p>
+                  <p class="card-text"><%= bookmark.movie.rating.round %></p>
+                  <p class="card-text">"<%= bookmark.comment %>"</p>
+                </div>
+                <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"btn btn-danger rounded-4 mt-3" %>
+              </div>
             </div>
-          </div>
+        </div>
+      <% end %>
       </div>
-    <% end %>
+    </div>
+    <div class="col-4">
+      <div class="card rounded-4 shadow-sm p-4">
+        <h4>Add a new movie</h4>
+        <%= simple_form_for [@list, @bookmark] do |f| %>
+          <%= f.association :movie, as: :select %>
+          <%= f.input :comment %>
+          <%= f.button :submit, class: 'btn btn-success rounded-4' %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
